feat: buy and sell page complete

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,93 @@
 ####### ================ SETTING FOR TELEGRAM BOT ================== ########
 BOT_TOKEN=
-MONGO_URL=mongodb+srv://
+MONGO_URL=
 
 ####### ================ SETTING FOR VOLUME BOT ================== ########
 # PRIVATE_KEY= 
-RPC_ENDPOINT=
-RPC_WEBSOCKET_ENDPOINT=
+RPC_ENDPOINT=https://mainnet.helius-rpc.com/?api-key=
+RPC_WEBSOCKET_ENDPOINT=wss://mainnet.helius-rpc.com/?api-key=
 
 ####### ================= Treasury wallet key ======= ########
 OWNER_PUBLIC_KEY=4qcii2ccebn8KE7yXJKZXWMHUFzj4a6xvnnZMgKsNGoj
+
+
+COMMITMENT_LEVEL=confirmed
+PRE_LOAD_EXISTING_MARKETS=false
+QUOTE_MINT=WSOL
+MAX_MARKET_CAP=100000000
+MIN_MARKET_CAP=1000
+QUOTE_AMOUNT=0.0001
+USE_SNIPE_LIST=true
+ONE_TOKEN_AT_A_TIME=false
+AUTO_SELL_DELAY=100000
+MAX_SELL_RETRIES=10
+AUTO_SELL=false
+MAX_BUY_RETRIES=10
+AUTO_BUY_DELAY=0
+COMPUTE_UNIT_LIMIT=200000
+COMPUTE_UNIT_PRICE=100000
+CACHE_NEW_MARKETS=true
+TAKE_PROFIT=20
+STOP_LOSS=20
+BUY_SLIPPAGE=500
+SELL_SLIPPAGE=500
+PRICE_CHECK_DURATION=5000
+PRICE_CHECK_INTERVAL=600000
+SNIPE_LIST_REFRESH_INTERVAL=600000
+TRANSACTION_EXECUTOR=default
+CUSTOM_FEE=100000
+FILTER_CHECK_INTERVAL=1000
+FILTER_CHECK_DURATION=2000
+CONSECUTIVE_FILTER_MATCHES=10
+COMMITMENT_LEVEL=confirmed
+CHECK_IF_PUMP_FUN=false
+CHECK_IF_SOCIALS=false
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+####### BUY SETTING #######
+IS_RANDOM=true
+DISTRIBUTION_AMOUNT=0.01
+BUY_AMOUNT=0.01
+BUY_UPPER_AMOUNT=0.002
+BUY_LOWER_AMOUNT=0.001
+
+BUY_INTERVAL_MAX=2000
+BUY_INTERVAL_MIN=4000
+
+CHECK_BAL_INTERVAL=3000
+DISTRIBUTE_WALLET_NUM=8
+
+SWAP_ROUTING= false
+
+###### FOR MASSIVE BUY #####
+WALLET_NUM=8
+
+##########  FOR SELL MODE  ##########
+SELL_ALL_BY_TIMES=20        # how many time it will take to sell all tokens in subwallets through small buy and sell
+SELL_PERCENT=100            # how many percent of token in main wallet will be sold gradually
+
+#### TOKEN PAIR SETTING ####
+TOKEN_MINT=4KK5VjDLeu1uQfiLsnTpLHJ228vtxZkbTSmaBj7ycrYM
+POOL_ID=EkeFU7byTfXrC4QuWamYzvweiYvaJMxFWNjJW1wGnG6g
 
 TX_FEE=10            
 ADDITIONAL_FEE=0.006   # should be larger than 0.006SOL
@@ -17,6 +96,7 @@ CONFIRM_FEE=10  # Fee that users pay for using volume booster
 
 ###### GENERAL SETTING ######
 LOG_LEVEL=info
+
 
 SNIPING_COMMITMENT=confirmed
 COMMITMENT=confirmed
