--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@metaplex-foundation/js": "^0.20.1",
     "@metaplex-foundation/mpl-token-metadata": "^3.2.1",
     "@metaplex-foundation/umi": "^0.9.1",
-    "@raydium-io/raydium-sdk": "^1.3.1-beta.53",
+    "@openbook-dex/openbook": "^0.0.9",
+    "@raydium-io/raydium-sdk": "^1.3.1-beta.47",
     "@solana/spl-token": "^0.4.0",
     "@solana/web3.js": "^1.89.1",
     "@types/bs58": "^4.0.4",
